<resources>
    <string name="app_name">Travelogue</string>
    <string name="action_settings">Settings</string>
    <string name="submit_call">Submit</string>
    <string name="add_place_title">Add New Entry</string>

    <string name="place_name_hint">Name</string>
    <string name="place_location_hint">Location</string>
    <string name="place_notes_hint">Notes</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
